# docs/swagger.json
@@ -92,6 +92,29 @@
                 "responses": {}
             }
         },
+        "/api/ai/chat{id}": {
+            "put": {
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "反馈数据管理"
+                ],
+                "summary": "ai 更新数据",
+                "parameters": [
+                    {
+                        "description": "body",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.Dict"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
+        },
         "/api/department": {
             "get": {
                 "consumes": [
@@ -433,6 +456,71 @@
                 "tags": [
                     "反馈数据管理"
                 ],
+                "summary": "ai 更新emo数据",
+                "parameters": [
+                    {
+                        "description": "body",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.Dict"
+                        }
+                    }
+                ],
+                "responses": {}
+            },
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "反馈数据管理"
+                ],
+                "summary": "ai 创建数据",
+                "parameters": [
+                    {
+                        "description": "body",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.Dict"
+                        }
+                    }
+                ],
+                "responses": {}
+            },
+            "delete": {
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "反馈数据管理"
+                ],
+                "summary": "ai 删除数据",
+                "parameters": [
+                    {
+                        "description": "body",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.Dict"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/api/feedbacks/feedback": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "反馈数据管理"
+                ],
                 "summary": "feedback 更新emo数据",
                 "parameters": [
                     {
@@ -490,7 +578,7 @@
                 "responses": {}
             }
         },
-        "/api/feedbacks/{id}": {
+        "/api/feedbacks/feedback/{id}": {
             "put": {
                 "consumes": [
                     "application/json"
@@ -1524,7 +1612,7 @@
                     "type": "string"
                 },
                 "versionId": {
-                    "type": "string"
+                    "type": "integer"
                 }
             }
         },
